@@ -27,6 +27,9 @@ WC3 = WooCommerce 3 (WordPress)
 - ALL: Make "property specification not found" a debug level message.
 - ALL: module specific translations were not loaded on case sensitive systems
   (e.g. linux).
+- ALL: Warning 511: Incorrect vattype value used (false) in vattype tag as part
+  of invoice section in the XML. Using default value of 1(national, regular
+  invoice). (CE005BVTC)
 - ALL: Message 'message_warning_no_vattype_must_split' was not translated.
 - OC: Breadcrumb on settings page was incorrect.
 - JOO: Access rights revisited so that menu-items remain visible in the admin
